Fix dark mode toggle not working on tailwind's dark selector

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,19 +1,27 @@
+/* ref for dark configure: https://medium.com/@ebjonsberg/add-a-dark-light-mode-selector-to-your-next-js-project-b023f9c5649e */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
+:light {
   --background: #ffffff;
   --foreground: #171717;
-  --color-primary: #1d4ed8; /* blue-700 */
-  --color-secondary: #6b7280; /* gray-500 */
+  --color-primary: #1d4ed8;
+  /* blue-700 */
+  --color-secondary: #6b7280;
+  /* gray-500 */
 }
 
-[data-theme='dark'] {
-  --background: #0a0a0a;
-  --foreground: #ededed;
-  --color-primary: #a78bfa; /* violet-400 */
-  --color-secondary: #d1d5db; /* gray-300 */
+/* [data-theme='dark'] { */
+@media (prefers-color-scheme: dark) {
+  .dark {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+    --color-primary: #a78bfa;
+    /* violet-400 */
+    --color-secondary: #d1d5db;
+    /* gray-300 */
+  }
 }
 
 body {
@@ -21,4 +29,3 @@ body {
   background: var(--background);
   /* font-family: Arial, Helvetica, sans-serif; */
 }
-
